# PPF-MEAM

./: CMakeLists.txt  README.md  demo.cpp
data/: cloud_hull.pcd  cloud_out.pcd  nap.STL  nap.ply  nap_100k.ply  nap_del.ply  nap_ply.ply  nap_top.pcd  nap_top_mm.ply
data/model/nap/: nap.SLDPRT  nap.STL  nap.x_t
data/result/nap/: scene2.txt  scene4.txt  scene8.txt
include/: CMakeLists.txt
include/B2BTL_MEAM/: B2BTL_MEAM.cpp  B2BTL_MEAM.h  B2BTL_MEAMRegistration.cpp  B2BTL_MEAMRegistration.h  CMakeLists.txt
include/HPR/: CMakeLists.txt  HPR.cpp  HPR.h
include/PPF/: CMakeLists.txt  MyPPFRegistration.hpp  PPF.cpp  PPF.h
include/SHOT/: CMakeLists.txt  SHOT.cpp  SHOT.h
include/dataType/: CMakeLists.txt  dataType.cpp  dataType.h
include/meshSampling/: CMakeLists.txt  meshSampling.cpp  meshSampling.h
include/pclFunction/: CMakeLists.txt  pclFunction.cpp  pclFunction.h
src/: CMakeLists.txt  binPicking.cpp
src/kinect/: CMakeLists.txt  kinect.cpp  kinect.h
src/robotArm/: CMakeLists.txt  robotArm.cpp  robotArm.h
src/socket/: CMakeLists.txt  socket.cpp  socket.h
